--- a/ets2-tool/src-tauri/locales/de.json
+++ b/ets2-tool/src-tauri/locales/de.json
@@ -18,7 +18,7 @@
       "profile": {
             "select_profile": "Wähle ein Profil",
             "select_save": "Wähle einen Spielstand",
-            "clone_profile": "Profil klonen",
+            "clone_profile": "🧑‍🤝‍🧑",
             "refresh": "⟳"
       },
       "game": {
