--- a/ets2-tool/src-tauri/locales/en.json
+++ b/ets2-tool/src-tauri/locales/en.json
@@ -102,7 +102,7 @@
                   }
             },
             "settings": {
-                  "color_scheme": {
+                  "color_theme": {
                         "title": "Color Scheme",
                         "desc": "Change the app color scheme"
                   },
